1. Improvements to Collection API [#305293].